<resources>
    <string name="app_name">FamilyLine</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="register">注册</string>
    <string name="register_soon">立即注册</string>
    <string name="login">登录</string>
    <string name="login_soon">立即登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码（至少6位）</string>
    <string name="input_password_sure">请确认密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="password_rules">密码格式不正确</string>
    <string name="username_rules">用户名格式不正确</string>
    <string name="email_rules">邮箱格式不正确</string>
    <string name="equal_pwd">两次输入的密码不同</string>
    <string name="message">消息</string>
    <string name="contact">亲友</string>
    <string name="dynamic">动态</string>
    <string name="mine">我的</string>
    <string name="chat_list">发起群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="swipe">扫一扫</string>
    <string name="search">搜索</string>
    <string name="delete">删除该聊天</string>
    <string name="top">置顶该聊天</string>
    <string name="hold_speak">按住 说话</string>
    <string name="send">发送</string>
    <string name="added">已添加</string>
    <string name="send_message">发消息</string>
    <string name="detail">详细信息</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="cancel">取消</string>
    <string name="logout">退出登录</string>
    <string name="description">contentDescription</string>
    <string name="addFriend">加好友</string>
    <string name="friend_circle">亲友圈</string>
    <string name="family_line">Family Line</string>
    <string name="com_name">Galaxy Light Technology Co.,Ltd</string>
    <string name="publish_hint">想说点什么呢……</string>
    <string name="publish">发表</string>
    <string name="publish_content">发表动态</string>
    <string name="location_list">位置信息</string>
    <string name="location">位置</string>
</resources>
