<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:background="@color/half_white"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:text="@string/camera"
        android:textSize="@dimen/sp_20" />

    <Button
        android:id="@+id/btn_gallery"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:text="@string/gallery"
        android:textSize="@dimen/sp_20" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:text="@string/cancel"
        android:textSize="@dimen/sp_20" />
</LinearLayout>