<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.galaxy_light.gzh.familyline.ui.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/white">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/description" />

        <EditText
            android:id="@+id/tet_login_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_edit_stroke"
            android:gravity="center_vertical"
            android:hint="@string/input_username"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <EditText
                android:id="@+id/tet_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/bg_edit_stroke"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10" />
            <CheckBox
                android:id="@+id/cb_pwd_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:button="@null"
                android:background="@drawable/pwd_see_selector"/>
        </FrameLayout>

        <Button
            android:id="@+id/btn_login_soon"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_20"
            android:enabled="false"
            android:text="@string/login_soon"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</RelativeLayout>
